FIX conflicting events in Scheduler were notm properly visible

--- a/Facades/js/openui5.template.css
+++ b/Facades/js/openui5.template.css
@@ -244,8 +244,9 @@ html.sap-phone .sapMWizard .sapMWizardNextButtonVisible {position: relative !imp
 .bar-folder {filter: drop-shadow(0px -3px 0px rgb(0 0 0 / 0.8))}
 
 /* Scheduler */
+/* Decrease height of sing-line rows */
 .sapMPlanCal.halfHeight>.sapMList>table>tbody>tr>td>.sapUiCalendarRow:not(.sapMPlanCalRowLarge)>.sapUiCalendarRowApps {
-    min-height: 2rem; height: 100% !important;
+    min-height: max(2rem, 100%);
 }
 .sapMPlanCal.halfHeight>.sapMList .sapMListTblCell.sapMPlanCalAppRow {height: inherit;}
 .sapMPlanCal.halfHeight>.sapMList .sapMPlanCalAppRow>.sapUiCalendarRow {height: 100%}
